# dashboard-bi

./: .env  .env.production  ADVANCED_QUERIES.md  CLIENT_GUIDE.md  DEVELOPER_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PRODUCTION-README.md  deploy-production.ps1  deploy-production.sh  docker-compose.prod.yml  docker-compose.yml  start-with-postgres.bat  start-with-postgres.sh
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  alembic.ini  dashboard.db  init_db.py  migrate_db.py  pyproject.toml  requirements.txt  setup.py
backend/alembic/: alembic.ini  env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/app/: auth.py  database.py  db_manager.py  main.py  mongo_manager.py  schemas.py  utils.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: auth.py  connections.py  queries.py  schemas.py
backend/app/core/: config.py  security.py
backend/app/models/: connection.py  query.py  user.py
backend/app/routers/: auth.py  dashboards.py  databases.py  queries.py  query.py
backend/app/schemas/: connection.py  query.py  token.py  user.py
backend/app/services/: auth_service.py  database_service.py  query_service.py
backend/app/utils/: __init__.py  encryption.py  validators.py
backend/tests/: conftest.py  test_auth.py  test_connections.py  test_queries.py
frontend/: .dockerignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  (+2 more)
mongo-init/: init.js
nginx/: nginx.conf
postgres-init/: README.md  init.sql
(+30 files in other folders)
